--- a/paginas/finalizacaoCompra.html
+++ b/paginas/finalizacaoCompra.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../estilos/bootstrap.css">
     <link rel="stylesheet" href="../estilos/finalizacaoCompra.css">
     <link rel="stylesheet" href="../estilos/styleResponsividade.css" media="screen and (max-width: 800px)">
-    <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px)">
+    <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px & min-width: 801px)">
 </head>
 <body>
     <header>
@@ -58,14 +58,14 @@
             </div>
     </header>
     <main>
-        <div class="container col-5 rounded d-flex justify-content-center" id="caixa">
+        <div class="container col-5 rounded d-flex justify-content-center m-0 p-2" id="caixa">
                 <form action="../paginas/home.html" method="post" id="compra">
-                    <div class="container d-flex flex-column">
+                    <div class="container m-0 p-0 d-flex flex-column">
                         <h3>Compra realizada com sucesso!</h3><br>
                         <p>Em breve você receberá as notificações de acompanhamento do pedido por email</p>
                     </div>
-                    <div class="container d-flex justify-content-center">
-                        <button type="submit" class="my-2 rounded col-6 py-1">Retonar para tela inicial</button>
+                    <div class="container m-0 p-0 d-flex justify-content-center">
+                        <button type="submit" class="my-2 rounded p-1">Retonar para tela inicial</button>
                     </div>
                 </form> 
         </div>
