--- a/paginas/recuperacaoSenha.html
+++ b/paginas/recuperacaoSenha.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="geral.css">
     <link rel="stylesheet" href="../estilos/recuperacaoSenha.css">
+    <link rel="stylesheet" href="../estilos/styleResponsividade.css" media="screen and (max-width: 800px)">
+    <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px & min-width: 801px)">
 </head>
 <body>
     <main>
