--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>avaliacao2</title>
     <link rel="stylesheet" href="estilos/geral.css">
     <link rel="stylesheet" href="estilos/index.css">
+    <link rel="stylesheet" href="../estilos/styleResponsividade.css" media="screen and (max-width: 800px)">
+    <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px & min-width: 801px)">
 </head>
 <body>
     <main>
