--- a/paginas/paginaCompra.html
+++ b/paginas/paginaCompra.html
@@ -60,11 +60,11 @@
     <main>
         <div class="container col-5 rounded d-flex justify-content-center m-0 p-0" id="caixa">
                 <form action="../paginas/finalizacaoCompra.html" method="post" id="compra">
-                    <div class="container d-flex justify-content-center">
+                    <div class="container m-0 d-flex justify-content-center">
                         <h3>Finalizar compra</h3>
                     </div>
-                    <section class="container d-flex flex-row">
-                        <div class="container">
+                    <section class="container m-0 p-0 d-flex flex-row">
+                        <div class="container m-0 p-2">
                             <label for="cartao">Número do cartão</label><br>
                             <input type="number" id="cartao"><br>
                             <label for="nome">Nome no cartão</label><br>
@@ -77,7 +77,7 @@
                                 <option value="quatro">4x</option>
                             </select><br>
                         </div>
-                        <div class="container">
+                        <div class="container m-0 p-2">
                             <label for="cvv">CVV</label><br>
                             <input type="number" id="cvv"><br>
                             <label for="validade">Validade</label><br>
@@ -85,8 +85,8 @@
                             
                         </div>
                     </section>
-                    <section class="container d-flex flex-row">
-                        <div class="container">
+                    <section class="container m-0 p-0 d-flex flex-row">
+                        <div class="container m-0 p-2">
                             <label for="cep">CEP</label><br>
                             <input type="number" id="cep"><br>
                             <label for="numero">Nº</label><br>
@@ -94,14 +94,14 @@
                             <label for="telefone">Telefone/Celular</label><br>
                             <input type="tel" id="telefone" placeholder="(xx) xxxxx-xxxx" autocomplete="off"><br>
                         </div>
-                        <div class="container">
+                        <div class="container m-0 p-2">
                             <label for="endereco">Endereço</label><br>
                             <input type="text" id="endereco"><br>
                             <label for="bairro">Bairro</label><br>
                             <input type="text" id="bairro"><br>
                         </div>
                     </section>
-                    <div class="container d-flex justify-content-center">
+                    <div class="container m-0 p-0 d-flex justify-content-center">
                         <button type="submit" class="my-2 rounded col-6 py-1">Finalizar pedido</button>
                     </div>
                 </form> 
