--- a/paginas/home.html
+++ b/paginas/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../estilos/bootstrap.css">
     <link rel="stylesheet" href="../estilos/home.css">
     <link rel="stylesheet" href="../estilos/styleResponsividade.css" media="screen and (max-width: 800px)">
-    <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px & min-width: 801px)">
+    <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px) and (min-width: 801px)">
 
     
 </head>
@@ -33,6 +33,7 @@
                         <li class="navbar-item"><a href="#" class="nav-link text-dark">E-Books</a></li>
                         <li class="navbar-item"><a href="#" class="nav-link text-dark">Lançamentos</a></li>
                         <li class="navbar-item"><a href="#" class="nav-link text-dark">Pré-venda</a></li>
+                        <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
                     </ul>
                     <form action="#">
                         <input type="search" placeholder="Pesquise">
@@ -40,11 +41,12 @@
                             <img src="../imagens/lupa.png" style="width: 20px;" alt="lupa" srcset="">
                         </button>
                     </form>
-                    <form action="#">
-                        <button type="submit" class="rounded" id="carrinho">
+                    <form action="../paginas/paginaCarrinho.html">
+                        <button type="submit" class="rounded mx-2" id="carrinho">
                             <img src="../imagens/iconCarrinho.png" style="width: 30px;" alt="carrinho" srcset="">
                         </button>
                     </form>
+
                 </nav>
                 <div id="telaMenor">
                     <div id="fecharTelaMenor"></div>
@@ -54,15 +56,15 @@
                         <li class="navbar-item"><a href="#" class="nav-link text-dark">E-Books</a></li>
                         <li class="navbar-item"><a href="#" class="nav-link text-dark">Lançamentos</a></li>
                         <li class="navbar-item"><a href="#" class="nav-link text-dark">Pré-venda</a></li>
-                        <li class="navbar-item"><a href="#" class="nav-link text-dark">Carrinho</a></li>
-                        <li class="container d-flex flex-row">
+                        <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
+                        <li class="container d-flex flex-row justify-content-around">
                             <form action="#">
                                 <input type="search" placeholder="Pesquise">
                                 <button type="submit" id="lupa">
                                     <img src="../imagens/lupa.png" style="width: 20px;" alt="lupa" srcset="">
                                 </button>
                             </form>
-                            <form action="#">
+                            <form action="../paginas/paginaCarrinho.html">
                                 <button type="submit" class="rounded" id="carrinho">
                                     <img src="../imagens/iconCarrinho.png" style="width: 30px;" alt="carrinho" srcset="">
                                 </button>
@@ -421,6 +423,7 @@
         <footer>
             <div class="container-fluid bg-dark">
                 <p class="text-white text-center">Todos os direitos reservados</p>
+                <p></p>
 
             </div>
         </footer>
